--- a/app.json
+++ b/app.json
@@ -1,11 +1,17 @@
 {
   "name": "Telegram Group Saver",
-  "description": "A Telegram to make your leech/mirror group copyright free",
+  "description": "A Telegram to make your leech/mirror group copyright free by @AbirHasan2005",
   "keywords": [
-    "telegram"
+    "telegram",
+    "group",
+    "files",
+    "store",
+    "userbot",
+    "bot",
+    "save"
   ],
   "repository": "https://github.com/AbirHasan2005/Save-Group",
-  "success_url": "https://github.com/AbirHasan2005/Save-Group",
+  "success_url": "https://t.me/joinchat/O9WIjhCGHLo0YmQ0",
   "website": "https://github.com/AbirHasan2005/Save-Group",
   "env": {
     "API_ID": {
@@ -16,13 +22,14 @@
       "description": "Get this value from https://my.telegram.org or @TeleORG_Bot",
       "value": ""
     },
-    "STRING_SESSION ": {
+    "STRING_SESSION": {
       "description": "Pyrogram user session string, get it from @StringSessionGen_Bot",
       "value": ""
     },
     "FORCE_SUB_CHANNEL": {
-      "description": "your channel username that you want to forcesub",
-      "value": ""
+      "description": "Your channel username that you want to forcesub",
+      "value": "",
+      "required": false
     },
     "MONGODB_URI ": {
       "description": "Mongo databse url get it from https://www.mongodb.com",
@@ -45,5 +52,17 @@
       "value": "",
     }
   },
-  "stack": "heroku-20"
+  "stack": "heroku-20",
+  "buildpacks": [
+      {
+        "url": "heroku/python"
+      }
+    ],
+  "formation": {
+    "worker": {
+        "quantity": 1,
+        "size": "free"
+    }
+  }
+}
 }
