--- a/app.json
+++ b/app.json
@@ -31,11 +31,11 @@
       "value": "",
       "required": false
     },
-    "MONGODB_URI ": {
+    "MONGODB_URI": {
       "description": "Mongo databse url get it from https://www.mongodb.com",
       "value": ""
     },
-    "BOT_TOKEN ": {
+    "BOT_TOKEN": {
       "description": "telegram bot token, get it from @botfather ",
       "value": ""
     },
@@ -49,7 +49,7 @@
     },
     "DATABASE_ID": {
       "description": "Your private channel id for databse.",
-      "value": "",
+      "value": ""
     }
   },
   "buildpacks": [
